--- a/env.example
+++ b/env.example
@@ -6,7 +6,11 @@
 # =============================================================================
 
 # WalletConnect Project ID (get from https://cloud.walletconnect.com)
+# Used by web app (Vite)
 VITE_WALLETCONNECT_PROJECT_ID=your_project_id_here
+
+# Used by admin panel (Next.js)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_project_id_here
 
 # =============================================================================
 # Contract Deployment (for foundry scripts)
@@ -41,21 +45,40 @@ VITE_RESOLVER_ADDRESS_BASE_MAINNET=
 VITE_USDC_ADDRESS_BASE_MAINNET=
 
 # =============================================================================
-# Subgraph Configuration
+# API Configuration
 # =============================================================================
 
-# The Graph hosted service subgraph URL (testnet)
-VITE_SUBGRAPH_URL_TESTNET=
+# REST API URL for fetching indexed market data
+VITE_API_URL=http://localhost:3001/api
 
-# The Graph hosted service subgraph URL (mainnet)
-VITE_SUBGRAPH_URL_MAINNET=
+# API server port
+PORT=3001
 
-# The Graph API key (for production deployments)
-GRAPH_API_KEY=
+# =============================================================================
+# Database Configuration
+# =============================================================================
+
+# Postgres connection string for the API and indexer
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/predictions
+
+# =============================================================================
+# Shovel Indexer Configuration
+# =============================================================================
+
+# RPC URL for Base Sepolia (used by Shovel)
+# Note: Can reuse BASE_SEPOLIA_RPC_URL above
+BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
+
+# RPC URL for Base mainnet (used by Shovel)
+BASE_RPC_URL=https://mainnet.base.org
 
 # =============================================================================
 # Optional Configuration
 # =============================================================================
+
+# Use mock data instead of real API data (default: true)
+# Set to "false" to use live data from the API
+VITE_USE_MOCK_DATA=true
 
 # Enable development mode features
 VITE_DEV_MODE=false
